--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "dependencies": {
     "graphql": "^14.0.0",
+    "graphql-yoga": "^1.16.2",
     "prisma-binding": "^2.1.5"
+  },
+  "scripts": {
+    "deploy": "cd prisma && prisma deploy && cd .."
   }
 }
