--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build:web": "cd web && yarn build",
-    "dev:api": "cd api && yarn dev",
-    "dev:web": "cd web && yarn dev",
+    "build:web": "cd web && npm run build",
+    "dev:api": "cd api && npm run dev",
+    "dev:web": "cd web && npm run dev",
     "dev": "npm-run-all --parallel dev:*",
     "deploy:prisma": "cd api/prisma && prisma deploy"
   },
@@ -17,6 +17,7 @@
     "web"
   ],
   "devDependencies": {
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3"
   }
 }
