--- a/api/package.json
+++ b/api/package.json
@@ -11,5 +11,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4"
   }
 }
