--- a/web/package.json
+++ b/web/package.json
@@ -11,8 +11,13 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^6.1.1",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "apollo-boost": "^0.1.15",
+    "graphql": "^14.0.2",
+    "isomorphic-unfetch": "^2.1.1",
+    "next": "^6.1.2",
+    "react": "^16.5.0",
+    "react-apollo": "^2.1.11",
+    "react-dom": "^16.5.0",
+    "recompose": "^0.30.0"
   }
 }
