--- a/web/package.json
+++ b/web/package.json
@@ -8,16 +8,21 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 3000"
   },
   "dependencies": {
-    "apollo-boost": "^0.1.15",
+    "animated": "^0.2.2",
+    "apollo-boost": "^0.1.16",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "^14.0.2",
     "isomorphic-unfetch": "^2.1.1",
     "next": "^6.1.2",
-    "react": "^16.5.0",
+    "react": "^16.5.1",
     "react-apollo": "^2.1.11",
-    "react-dom": "^16.5.0",
+    "react-dom": "^16.5.1",
+    "react-error-boundary": "^1.2.3",
+    "react-toggle": "^4.0.2",
+    "react-transition-group": "^2.4.0",
     "recompose": "^0.30.0"
   }
 }
